Fix Focusing on mobile sideNav highlighting

--- a/src/index.css
+++ b/src/index.css
@@ -1454,6 +1454,11 @@ video {
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 
+.border-green-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(22 163 74 / var(--tw-border-opacity));
+}
+
 .bg-slate-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
@@ -1482,6 +1487,11 @@ video {
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-green-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -1677,6 +1687,10 @@ video {
 
 .border-1 {
   border-width: 1px;
+}
+
+.border-l-3 {
+  border-left-width: 3px;
 }
 
 /* Custom fonts */
